tests/errors/string_58/STRI2INT2.src
.IPPcode21

DEFVAR GF@str
MOVE GF@str string@....

STRI2int GF@str GF@str int@4
